--- a/signupPage.html
+++ b/signupPage.html
@@ -1,32 +1,58 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Sign Up</title>
-   <link rel="stylesheet" href="SignupPage/signupPageStyles.css"/>
-  <link href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2:wght@700&display=swap" rel="stylesheet">
-  <script src="SignupPage/signupPageScript.js" type="text/javascript" charset="utf-8"></script>
- <script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-app.js"></script>
- <script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-auth.js"></script>
- <script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-firestore.js"></script>
- <script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-analytics.js"></script>
- <script src="https://cdn.jsdeliver.net/npm/sweetalert2@9"></script>
-</head>
-<body>
-<form class="box" id="signupForm">
-  <h1>Registrarse</h1>
-  <input type="text" name="" id="signupName" placeholder="Nombre de usuario" required/>
-  <input type="text" name="" id="signupEmail" placeholder="Correo Electrónico" required/>
-  <input type="password" name="" id="signupPassword" placeholder="Elige una Contraseña" required/>
-  <button class="signupSub" id="subBtn2">Registrarse</button>
-  <h5>or</h5>
-  <img class="google" src="" alt="" />
-  <h4>¿Ya eres un usuario?, <a href="loginPage.html">Inicia sesión aquí</a></h4>
- </form>
-</body>
-<!-- <script type="text/javascript" charset="utf-8">
+    <link rel="stylesheet" href="SignupPage/signupPageStyles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="SignupPage/signupPageScript.js"
+      type="text/javascript"
+      charset="utf-8"
+    ></script>
+    <script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-analytics.js"></script>
+    <script src="https://cdn.jsdeliver.net/npm/sweetalert2@9"></script>
+  </head>
+  <body>
+    <form class="box" id="signupForm">
+      <h1>Registrarse</h1>
+      <input
+        type="text"
+        name=""
+        id="signupName"
+        placeholder="Nombre de usuario"
+        required
+      />
+      <input
+        type="text"
+        name=""
+        id="signupEmail"
+        placeholder="Correo Electrónico"
+        required
+      />
+      <input
+        type="password"
+        name=""
+        id="signupPassword"
+        placeholder="Elige una Contraseña"
+        required
+      />
+      <button class="signupSub" id="subBtn2">Registrarse</button>
+      <h5>or</h5>
+      <img class="google" src="" alt="" />
+      <h4>
+        ¿Ya eres un usuario?, <a href="loginPage.html">Inicia sesión aquí</a>
+      </h4>
+    </form>
+  </body>
+  <!-- <script type="text/javascript" charset="utf-8">
   var firebaseConfig = {
     apiKey: "AIzaSyCsFBpqVFA-5B0i4mL4cg2FHKQvgyX7qAY",
     authDomain: "rdg-1220.firebaseapp.com",
